fix: delete white space in top and left

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
